--- a/asset/translations/tr.json
+++ b/asset/translations/tr.json
@@ -1,14 +1,17 @@
 {
   "home": {
     "title": "Anasayfa"
+
   },
   "general": {
     "button": {
       "save": "Kaydet",
-      "delete": "Sil"
+      "delete": "Sil",
+      "detail" : "Detay Sayfa"
     }
   },
   "login": {
     "loginTitle": "Kayit Ol"
   }
+  
 }
