--- a/asset/translations/en.json
+++ b/asset/translations/en.json
@@ -5,7 +5,8 @@
   "general": {
     "button": {
       "save": "Save",
-      "delete": "Delete"
+      "delete": "Delete",
+      "detail": "Detail Page"
     }
   },
   "login": {
