--- a/asset/translations/ru.json
+++ b/asset/translations/ru.json
@@ -5,7 +5,8 @@
   "general": {
     "button": {
       "save": "Сохранить",
-      "delete": "Удалить"
+      "delete": "Удалить",
+      "detail": "страница подробностей"
     }
   },
   "login": {
